fix: Delete `text-align: center`

--- a/src/component/Button.module.scss
+++ b/src/component/Button.module.scss
@@ -2,7 +2,6 @@
 
 .button {
   margin: 10px;
-  text-align: center;
   &__element {
     @include clickable;
     background-color: #fdd835;
